--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,7 @@
 # Define the default driver
 #webdriver.driver=phantomjs
-webdriver.driver.chrome=.\\drivers\\chromedriver.exe
-webdriver.driver.firefox=.\\drivers\\geckodriver.exe
+webdriver.chrome.driver=.\\drivers\\chromedriver.exe
+webdriver.gecko.driver=.\\drivers\\geckodriver.exe
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
