--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,5 @@
 # Define the default driver
-#webdriver.driver=chrome
+webdriver.driver=chrome
 webdriver.chrome.driver=.\\drivers\\chromedriver.exe
 webdriver.gecko.driver=.\\drivers\\geckodriver.exe
 
