adding new feature to new branch

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
                         <include>**/When*.java</include>
                         <include>**/*Story.java</include>
                     </includes>
+                    <encoding>UTF-8</encoding>
                     <argLine>-Xmx512m</argLine>
                 </configuration>
                 <executions>
