--- a/serenity.properties
+++ b/serenity.properties
@@ -2,6 +2,9 @@
 webdriver.driver=chrome
 webdriver.chrome.driver=.\\drivers\\chromedriver.exe
 webdriver.gecko.driver=.\\drivers\\geckodriver.exe
+language.english=VIE
+dev.username=liennguyen2811@gmail.com
+dev.pasword="@NANA2811
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
