--- a/serenity.properties
+++ b/serenity.properties
@@ -11,6 +11,7 @@ serenity.project.name = Demo Project using Serenity and JUnit
 
 # Root package for any JUnit acceptance tests
 serenity.test.root=org.fpt.automation.features
+serenity.data.dir = testdata
 
 # Customise your riequirements hierarchy
 #serenity.requirement.types=feature, story
