--- a/chrome.properties
+++ b/chrome.properties
@@ -2,6 +2,7 @@
 webdriver.driver=chrome
 webdriver.chrome.driver=.\\drivers\\chromedriver.exe
 webdriver.gecko.driver=.\\drivers\\geckodriver.exe
+webdriver.base.url = https://www.seleniumeasy.com/test/
 language.english=VIE
 dev.username=liennguyen2811@gmail.com
 dev.password=@NANA2811
