--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
                     </includes>
                     <encoding>UTF-8</encoding>
                     <argLine>-Xmx512m</argLine>
+                    <parallel>classes</parallel>
+                    <threadCount>2</threadCount>
                 </configuration>
                 <executions>
                     <execution>
@@ -144,6 +146,8 @@
                         </includes>
                         <encoding>UTF-8</encoding>
                         <argLine>-Xmx512m</argLine>
+                        <parallel>classes</parallel>
+                        <threadCount>2</threadCount>
                     </configuration>
                     <executions>
                         <execution>
