--- a/chrome.properties
+++ b/chrome.properties
@@ -5,7 +5,7 @@ webdriver.gecko.driver=.\\drivers\\geckodriver.exe
 webdriver.base.url = https://www.seleniumeasy.com/test/
 language.english=VIE
 dev.username=liennguyen2811@gmail.com
-dev.password=@NANA2811
+dev.password=
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
