--- a/chrome.properties
+++ b/chrome.properties
@@ -11,7 +11,7 @@ dev.password=
 serenity.project.name = Demo Project using Serenity and JUnit
 
 #headless.mode=true
-serenity.extension.packages=org.fpt.automation.seleniumeasy.capabilitieschrome
+serenity.extension.packages=org.fpt.automation.seleniumeasy.capabilitiesfirefox
 
 # Root package for any JUnit acceptance tests
 serenity.test.root=org.fpt.automation.features
