--- a/firefox.properties
+++ b/firefox.properties
@@ -1,5 +1,5 @@
 # Define the default driver
-webdriver.driver=chrome
+webdriver.driver=firefox
 webdriver.chrome.driver=.\\drivers\\chromedriver.exe
 webdriver.gecko.driver=.\\drivers\\geckodriver.exe
 webdriver.base.url = https://www.seleniumeasy.com/test/
