--- a/serenity.properties
+++ b/serenity.properties
@@ -9,12 +9,12 @@ dev.password=@NANA2811
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
 
-#headless.mode=true
-serenity.extension.packages=seleniumeasy.capabilities
-
 # Root package for any JUnit acceptance tests
 serenity.test.root=org.fpt.automation.features
 serenity.data.dir = testdata
+
+# CustomCapabilities
+driver_capabilities.common.unexpectedAlertBehaviour=ignore
 
 # Customise your riequirements hierarchy
 #serenity.requirement.types=feature, story
